Completion: fix ref/unref of info window's label

There was a memory leak, since the 'default_info' could only be reffed.

Also, it is safer to directly ref the widget, so we are sure that any
call to gtk_source_completion_info_set_widget() doesn't remove the last
reference.

https://bugzilla.gnome.org/show_bug.cgi?id=679271